--- a/Designer/Interface/Host/Host.xaml
+++ b/Designer/Interface/Host/Host.xaml
@@ -3,8 +3,7 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
 	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" mc:Ignorable="d" 
-	xmlns:c1="http://schemas.componentone.com/wpf/Basic"
-	xmlns:c1datetime="http://schemas.componentone.com/wpf/DateTimeEditors"
+	xmlns:sf="http://schemas.syncfusion.com/wpf"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
 	xmlns:Host="clr-namespace:NETPath.Interface.Host"
 	xmlns:Data="clr-namespace:NETPath.Interface.Data"
@@ -242,12 +241,12 @@
 			<RowDefinition Height="Auto" />
 		</Grid.RowDefinitions>
 		<Label Content="Open Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="0" />
-		<c1datetime:C1TimeEditor Value="{Binding Path=Data.OpenTimeout, Mode=TwoWay}" Name="OpenTimeout" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Grid.Column="0" Format="TimeSpan" VerticalContentAlignment="Center" Width="60" ValueChanged="OpenTimeout_ValueChanged" />
+		<sf:TimeSpanEdit Value="{Binding Path=Data.OpenTimeout, Mode=TwoWay}" Name="OpenTimeout" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Grid.Column="0" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Width="60" />
 		<Label Content="Close Timeout:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="1"  />
-		<c1datetime:C1TimeEditor Value="{Binding Path=Data.CloseTimeout, Mode=TwoWay}" Name="CloseTimeout" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Grid.Column="1" Format="TimeSpan" VerticalContentAlignment="Center" Width="60" ValueChanged="CloseTimeout_ValueChanged" />
+		<sf:TimeSpanEdit Value="{Binding Path=Data.CloseTimeout, Mode=TwoWay}" Name="CloseTimeout" HorizontalAlignment="Left" Margin="100,5,5,5" Grid.Row="0" Grid.Column="1" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Width="60" />
 		<ToggleButton IsChecked="{Binding Path=Data.AuthorizationImpersonateCallerForAllOperations}" Name="AuthorizationImpersonateCallerForAllOperations" Content="Impersonate Caller for all Operations" Margin="5" Grid.Row="1" Grid.Column="2" />
 		<Label Content="Manual Flow Control Limit:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="1" Grid.ColumnSpan="2" />
-		<c1:C1NumericBox Value="{Binding Path=Data.ManualFlowControlLimit}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Margin="5" Grid.Row="1" Grid.Column="1" ShowButtons="False" Name="ManualFlowControlLimit" ValueChanged="ManualFlowControlLimit_ValueChanged"  />
+		<sf:IntegerTextBox Value="{Binding Path=Data.ManualFlowControlLimit}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Margin="5" Grid.Row="1" Grid.Column="1" Name="ManualFlowControlLimit" />
 		<Label Content="Permission Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="3" />
 		<ComboBox Margin="120,5,5,5" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="3" SelectedIndex="{Binding Path=Data.AuthorizationPrincipalPermissionMode, Converter={StaticResource PrincipalPermissionModeConverter}}" >
 			<ComboBox.Items>
@@ -463,9 +462,9 @@
 						<ToggleButton Content="Include Windows Groups" Height="23" Grid.Row="0" IsChecked="{Binding Path=UserNamePasswordCacheLogonTokens}" Margin="5" Name="UserNamePasswordCacheLogonTokens" />
 						<ToggleButton Content="Cache Logon Tokens" Height="23" Grid.Row="1" IsChecked="{Binding Path=UserNamePasswordIncludeWindowsGroups}" Margin="5" Name="UserNamePasswordIncludeWindowsGroups" />
 						<Label Content="Cached Token Lifetime:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" />
-						<c1datetime:C1TimeEditor Format="TimeSpan" Height="24" Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordCachedLogonTokenLifetime, Mode=TwoWay}" Name="UserNamePasswordCachedLogonTokenLifetime" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0"  />
+						<sf:TimeSpanEdit Format="hh:mm:ss" ShowArrowButtons="False" Height="24" Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordCachedLogonTokenLifetime, Mode=TwoWay}" Name="UserNamePasswordCachedLogonTokenLifetime" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0"  />
 						<Label Content="Max Cached Logon Tokens:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" />
-						<c1:C1NumericBox Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordMaxCachedLogonTokens}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Row="3" Grid.Column="0" ShowButtons="False" Name="UserNamePasswordMaxCachedLogonTokens" ValueChanged="UserNamePasswordMaxCachedLogonTokens_ValueChanged" />
+						<sf:IntegerTextBox Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordMaxCachedLogonTokens}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Row="3" Grid.Column="0" Name="UserNamePasswordMaxCachedLogonTokens" />
 						<Label Content="Validation Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0" />
 						<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=UserNamePasswordValidationMode, Converter={StaticResource UserNamePasswordValidationModeConverter}}" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0"  >
 							<ComboBoxItem Content="None" />
