--- a/Designer/Interface/Service/Service.xaml
+++ b/Designer/Interface/Service/Service.xaml
@@ -8,9 +8,8 @@
 	xmlns:Projects="clr-namespace:NETPath.Projects;assembly=NETPath.Projects"
 	xmlns:Docs="clr-namespace:NETPath.Interface.Documentation"
 	xmlns:pc="http://schemas.propsectivesoftware.com/pc"
-	xmlns:c1="clr-namespace:C1.WPF;assembly=C1.WPF.4"
-	  xmlns:c1datetime="clr-namespace:C1.WPF.DateTimeEditors;assembly=C1.WPF.DateTimeEditors.4"
-	  d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
+	xmlns:sf="http://schemas.syncfusion.com/wpf"
+	d:DesignHeight="950" d:DesignWidth="1000" DataContext="{Binding RelativeSource={RelativeSource Self}}" UseLayoutRounding="True" >
 	<Grid.Resources>
 		<ResourceDictionary>
 			<ResourceDictionary.MergedDictionaries>
@@ -305,9 +304,9 @@
 							<ComboBoxItem Content="Unspecified" />
 						</ComboBox>
 						<Label Content="Max Items In Object Graph:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-						<c1:C1NumericBox Value="{Binding Path=ServiceType.SBMaxItemsInObjectGraph}" Format="G10" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="SBMaxItemsInObjectGraph" ValueChanged="SBMaxItemsInObjectGraph_ValueChanged" Grid.Row="2" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
+						<sf:IntegerTextBox Value="{Binding Path=ServiceType.SBMaxItemsInObjectGraph}" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Name="SBMaxItemsInObjectGraph" Grid.Row="2" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
 						<Label Content="Transaction Timeout:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-						<c1datetime:C1TimeEditor Value="{Binding Path=ServiceType.SBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="TimeSpan" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" FontSize="10pt" />
+						<sf:TimeSpanEdit Value="{Binding Path=ServiceType.SBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" FontSize="10pt" Style="{DynamicResource TimeSpanEditStyle}" />
 						<ToggleButton Content="Automatic Session Shutdown" IsChecked="{Binding Path=ServiceType.SBAutomaticSessionShutdown}" Margin="5" Grid.Column="0" Grid.Row="3" />
 						<ToggleButton Content="Ensure Ordered Dispatch" IsChecked="{Binding Path=ServiceType.SBEnsureOrderedDispatch}" Margin="5" Grid.Column="1" Grid.Row="3" />
 						<ToggleButton Content="Ignore Extension Data Object" IsChecked="{Binding Path=ServiceType.SBIgnoreExtensionDataObject}" Margin="5" Grid.Column="0" Grid.Row="4" />
@@ -388,9 +387,9 @@
 							<ComboBoxItem Content="Unspecified" />
 						</ComboBox>
 						<Label Content="Max Items In Object Graph:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-						<c1:C1NumericBox Value="{Binding Path=ServiceType.CBMaxItemsInObjectGraph}" Format="G10" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" ShowButtons="False" Name="CBMaxItemsInObjectGraph" ValueChanged="CBMaxItemsInObjectGraph_ValueChanged" Grid.Row="1" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
+						<sf:IntegerTextBox Value="{Binding Path=ServiceType.CBMaxItemsInObjectGraph}" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Name="CBMaxItemsInObjectGraph" Grid.Row="1" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
 						<Label Content="Transaction Timeout:" VerticalAlignment="Center" Grid.Row="1" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-						<c1datetime:C1TimeEditor Value="{Binding Path=ServiceType.CBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="TimeSpan" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
+						<sf:TimeSpanEdit Value="{Binding Path=ServiceType.CBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" FontSize="10pt" />
 						<ToggleButton Content="Automatic Session Shutdown" IsChecked="{Binding Path=ServiceType.CBAutomaticSessionShutdown}" Margin="5" Grid.Column="0" Grid.Row="2" />
 						<ToggleButton Content="Include Exception Detail In Faults" IsChecked="{Binding Path=ServiceType.CBIncludeExceptionDetailInFaults}" Margin="5" Grid.Column="1" Grid.Row="2" />
 						<ToggleButton Content="Ignore Extension Data Object" IsChecked="{Binding Path=ServiceType.CBIgnoreExtensionDataObject}" Margin="5" Grid.Column="0" Grid.Row="3" />
