--- a/Designer/Themes/IntegerTextBox.xaml
+++ b/Designer/Themes/IntegerTextBox.xaml
@@ -2,13 +2,59 @@
 			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 			xmlns:System="clr-namespace:System;assembly=mscorlib"
-			xmlns:c1="clr-namespace:C1.WPF;assembly=C1.WPF.4" >
+			xmlns:sf="http://schemas.syncfusion.com/wpf" >
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Colors.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 
-	<Style x:Key="{x:Type c1:C1NumericBox}" TargetType="{x:Type c1:C1NumericBox}">
+	<Style TargetType="{x:Type sf:IntegerTextBox}">
+		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}"/>
+		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}"/>
+		<Setter Property="BorderBrush" Value="{StaticResource DefaultBorderColor}"/>
+		<Setter Property="BorderThickness" Value="0"/>
+		<Setter Property="AllowDrop" Value="False"/>
+		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+		<Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
+		<Setter Property="Padding" Value="4"/>
+		<Setter Property="Template">
+			<Setter.Value>
+				<ControlTemplate TargetType="{x:Type sf:IntegerTextBox}">
+					<Grid>
+						<Border x:Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="0" Opacity="1">
+							<Grid>
+								<ScrollViewer Foreground="{TemplateBinding Foreground}" x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Visibility="{TemplateBinding ContentElementVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+								<ContentControl x:Name="PART_Watermark" Background="{TemplateBinding WatermarkBackground}" ContentTemplate="{TemplateBinding WatermarkTemplate}" Content="{TemplateBinding WatermarkText}" Foreground="{TemplateBinding WatermarkTextForeground}" FontWeight="{TemplateBinding FontWeight}" FontStyle="{TemplateBinding FontStyle}" FontStretch="{TemplateBinding FontStretch}" FontSize="{TemplateBinding FontSize}" FontFamily="{TemplateBinding FontFamily}" IsHitTestVisible="False" IsTabStop="False" Margin="2,0,0,0" Opacity="{TemplateBinding WatermarkOpacity}" Padding="{TemplateBinding Padding}" Grid.Row="0" Visibility="{TemplateBinding WatermarkVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+							</Grid>
+						</Border>
+					</Grid>
+					<ControlTemplate.Triggers>
+						<Trigger Property="IsKeyboardFocusWithin" Value="True">
+							<Setter Property="Background" Value="{StaticResource FocusedBackgroundColor}" />
+						</Trigger>
+						<Trigger Property="IsEnabled" Value="False">
+							<Setter Property="Foreground" Value="{StaticResource DisabledFontColor}" />
+							<Setter Property="PositiveForeground" Value="{StaticResource DisabledFontColor}" />
+						</Trigger>
+						<Trigger Property="IsMouseOver" Value="True">
+							<Setter Property="Background" Value="{StaticResource MouseOverBackgroundColor}"/>
+						</Trigger>
+						<Trigger Property="IsReadOnly" Value="True">
+							<Setter Property="Foreground" Value="{StaticResource ReadOnlyFontColor}"/>
+							<Setter Property="Background" Value="{StaticResource DisabledBackgroundColor}"/>
+						</Trigger>
+						<Trigger Property="sf:SkinStorage.EnableTouch" Value="True">
+							<Setter Property="Padding" Value="1,9"/>
+							<Setter Property="FontSize" Value="18"/>
+							<Setter Property="EnableTouch" Value="True"/>
+						</Trigger>
+					</ControlTemplate.Triggers>
+				</ControlTemplate>
+			</Setter.Value>
+		</Setter>
+	</Style>
+
+	<!--<Style x:Key="{x:Type c1:C1NumericBox}" TargetType="{x:Type c1:C1NumericBox}">
 		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}" />
 		<Setter Property="BorderBrush" Value="Transparent" />
 		<Setter Property="BorderThickness" Value="0" />
@@ -74,6 +120,6 @@
 				</ControlTemplate>
 			</Setter.Value>
 		</Setter>
-	</Style>
+	</Style>-->
 	
 </ResourceDictionary>
