--- a/Designer/Interface/Documentation/Class.xaml
+++ b/Designer/Interface/Documentation/Class.xaml
@@ -1,9 +1,11 @@
-﻿<Grid x:Class="NETPath.Interface.Documentation.Class"
-	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-	  mc:Ignorable="d" d:DesignHeight="150" d:DesignWidth="700">
+﻿<Grid
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+	xmlns:sf="http://schemas.syncfusion.com/wpf" 
+	x:Class="NETPath.Interface.Documentation.Class" 
+	mc:Ignorable="d" d:DesignHeight="150" d:DesignWidth="700">
 	<Grid.RowDefinitions>
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
@@ -14,9 +16,12 @@
 		<ColumnDefinition Width="*" />
 	</Grid.ColumnDefinitions>
 	<Label Content="Summary" Grid.Row="0" Grid.Column="0" />
-	<TextBox Text="{Binding Path=Documentation.Summary}" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Documentation.Summary}" SpellCheck.IsEnabled="True" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Summary}" IsReadOnly="False" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Remarks" Grid.Row="0" Grid.Column="1" />
-	<TextBox Text="{Binding Path=Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Remarks}" IsReadOnly="False" Grid.Row="1" Grid.Column="1" Margin="5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Example" Grid.Row="0" Grid.Column="2" />
-	<TextBox Text="{Binding Path=Documentation.Example}" Grid.Row="1" Grid.Column="2" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Documentation.Example}" Grid.Row="1" Grid.Column="2" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Example}" IsReadOnly="False" Grid.Row="1" Grid.Column="2" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 </Grid>
