--- a/Designer/Interface/Documentation/Standard.xaml
+++ b/Designer/Interface/Documentation/Standard.xaml
@@ -1,9 +1,10 @@
 ﻿<Grid x:Class="NETPath.Interface.Documentation.Standard"
-	  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-	  xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-	  mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="700">
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+	xmlns:sf="http://schemas.syncfusion.com/wpf" 
+	mc:Ignorable="d" d:DesignHeight="200" d:DesignWidth="700">
 	<Grid.RowDefinitions>
 		<RowDefinition Height="Auto" />
 		<RowDefinition Height="*" />
@@ -15,13 +16,18 @@
 		<ColumnDefinition Width="*" />
 	</Grid.ColumnDefinitions>
 	<Label Content="Summary" Grid.Row="0" Grid.Column="0" />
-	<TextBox Text="{Binding Path=Documentation.Summary}" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Path=Documentation.Summary}" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Summary}" IsReadOnly="False" Grid.Row="1" Grid.Column="0" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Remarks" Grid.Row="0" Grid.Column="1" />
-	<TextBox Text="{Binding Path=Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Path=Documentation.Remarks}" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Remarks}" IsReadOnly="False" Grid.Row="1" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label Content="Example" Grid.Row="2" Grid.Column="0" />
-	<TextBox Text="{Binding Path=Documentation.Example}" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox Text="{Binding Path=Documentation.Example}" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv HTMLText="{Binding Documentation.Example}" IsReadOnly="False" Grid.Row="3" Grid.Column="0" Margin="0,0,5,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label x:Name="ReturnsLabel" Content="Returns" Grid.Row="2" Grid.Column="1" />
-	<TextBox x:Name="ReturnsEditor" Text="{Binding Path=Documentation.Returns}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox x:Name="ReturnsEditor" Text="{Binding Path=Documentation.Returns}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv x:Name="ReturnsEditor" HTMLText="{Binding Documentation.Returns}" IsReadOnly="False" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 	<Label x:Name="ValueLabel" Content="Value" Grid.Row="2" Grid.Column="1" />
-	<TextBox x:Name="ValueEditor" Text="{Binding Path=Documentation.Value}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
+	<!--<TextBox x:Name="ValueEditor" Text="{Binding Path=Documentation.Value}" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />-->
+	<sf:RichTextBoxAdv x:Name="ValueEditor" HTMLText="{Binding Documentation.Value}" IsReadOnly="False" Grid.Row="3" Grid.Column="1" Margin="5,0,0,0" PageLayout="Continuous" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" />
 </Grid>
