--- a/Designer/Themes/IntegerTextBox.xaml
+++ b/Designer/Themes/IntegerTextBox.xaml
@@ -1,7 +1,6 @@
 ﻿<ResourceDictionary
 			xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 			xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-			xmlns:System="clr-namespace:System;assembly=mscorlib"
 			xmlns:sf="http://schemas.syncfusion.com/wpf" >
 	<ResourceDictionary.MergedDictionaries>
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Defaults.xaml" />
@@ -9,28 +8,41 @@
 	</ResourceDictionary.MergedDictionaries>
 
 	<Style TargetType="{x:Type sf:IntegerTextBox}">
-		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}"/>
+		<Setter Property="OverridesDefaultStyle" Value="True"/>
+		<Setter Property="WatermarkTextForeground" Value="{StaticResource DisabledFontColor}"/>
+		<Setter Property="CaretBrush" Value="{StaticResource DefaultFontColor}" />
+		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}" />
+		<Setter Property="EditorForeground" Value="{StaticResource DefaultFontColor}" />
+		<Setter Property="PositiveForeground" Value="{StaticResource DefaultFontColor}" />
+		<Setter Property="NegativeForeground" Value="{StaticResource DefaultFontColor}" />
+		<Setter Property="FontFamily" Value="{StaticResource DefaultFontFamily}" />
+		<Setter Property="FontWeight" Value="{StaticResource DefaultFontWeight}" />
+		<Setter Property="SelectionBrush" Value="{StaticResource DefaultSelectionColor}" />
 		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}"/>
-		<Setter Property="BorderBrush" Value="{StaticResource DefaultBorderColor}"/>
+		<Setter Property="WatermarkVisibility" Value="Collapsed" />
+		<Setter Property="ContentElementVisibility" Value="Visible" />
 		<Setter Property="BorderThickness" Value="0"/>
-		<Setter Property="AllowDrop" Value="False"/>
+		<Setter Property="UseLayoutRounding" Value="true"/>
+		<Setter Property="KeyboardNavigation.TabNavigation" Value="None"/>
 		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
+		<Setter Property="MinHeight" Value="20"/>
+		<Setter Property="AllowDrop" Value="true"/>
 		<Setter Property="Stylus.IsFlicksEnabled" Value="False"/>
 		<Setter Property="Padding" Value="4"/>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="{x:Type sf:IntegerTextBox}">
-					<Grid>
-						<Border x:Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="0" Opacity="1">
-							<Grid>
-								<ScrollViewer Foreground="{TemplateBinding Foreground}" x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Visibility="{TemplateBinding ContentElementVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-								<ContentControl x:Name="PART_Watermark" Background="{TemplateBinding WatermarkBackground}" ContentTemplate="{TemplateBinding WatermarkTemplate}" Content="{TemplateBinding WatermarkText}" Foreground="{TemplateBinding WatermarkTextForeground}" FontWeight="{TemplateBinding FontWeight}" FontStyle="{TemplateBinding FontStyle}" FontStretch="{TemplateBinding FontStretch}" FontSize="{TemplateBinding FontSize}" FontFamily="{TemplateBinding FontFamily}" IsHitTestVisible="False" IsTabStop="False" Margin="2,0,0,0" Opacity="{TemplateBinding WatermarkOpacity}" Padding="{TemplateBinding Padding}" Grid.Row="0" Visibility="{TemplateBinding WatermarkVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-							</Grid>
-						</Border>
-					</Grid>
+					<Border x:Name="Border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" CornerRadius="{TemplateBinding CornerRadius}" Opacity="1">
+						<Grid>
+							<ScrollViewer Foreground="{TemplateBinding Foreground}" x:Name="PART_ContentHost" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Visibility="{TemplateBinding ContentElementVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+							<ContentControl x:Name="PART_Watermark" Background="{TemplateBinding WatermarkBackground}" ContentTemplate="{TemplateBinding WatermarkTemplate}" Content="{TemplateBinding WatermarkText}" Foreground="{TemplateBinding WatermarkTextForeground}" FontWeight="{TemplateBinding FontWeight}" FontStyle="{TemplateBinding FontStyle}" FontStretch="{TemplateBinding FontStretch}" FontSize="{TemplateBinding FontSize}" FontFamily="{TemplateBinding FontFamily}" IsHitTestVisible="False" IsTabStop="False" Margin="2,0,0,0" Opacity="{TemplateBinding WatermarkOpacity}" Padding="{TemplateBinding Padding}" Grid.Row="0" Visibility="{TemplateBinding WatermarkVisibility}" VerticalAlignment="{TemplateBinding VerticalAlignment}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
+						</Grid>
+					</Border>
 					<ControlTemplate.Triggers>
 						<Trigger Property="IsKeyboardFocusWithin" Value="True">
 							<Setter Property="Background" Value="{StaticResource FocusedBackgroundColor}" />
+							<Setter Property="WatermarkVisibility" Value="Collapsed" />
+							<Setter Property="ContentElementVisibility" Value="Visible" />
 						</Trigger>
 						<Trigger Property="IsEnabled" Value="False">
 							<Setter Property="Foreground" Value="{StaticResource DisabledFontColor}" />
@@ -42,11 +54,6 @@
 						<Trigger Property="IsReadOnly" Value="True">
 							<Setter Property="Foreground" Value="{StaticResource ReadOnlyFontColor}"/>
 							<Setter Property="Background" Value="{StaticResource DisabledBackgroundColor}"/>
-						</Trigger>
-						<Trigger Property="sf:SkinStorage.EnableTouch" Value="True">
-							<Setter Property="Padding" Value="1,9"/>
-							<Setter Property="FontSize" Value="18"/>
-							<Setter Property="EnableTouch" Value="True"/>
 						</Trigger>
 					</ControlTemplate.Triggers>
 				</ControlTemplate>
